namespace Appraisal.Shared.Models
{
    public class Attribute
    {
        public string Name { get; set; }
        public string Value { get; set; }
    }
}