namespace Appraisal.Shared.Models
{
    public class Sku
    {
        public string Value { get; set; }
        public string Kind { get; set; }
    }
}